syntax = "proto3";

package order;

message GetUserOrderPayload {
  string userId = 1;
}

message GetUserOrderResult {
  string userId = 1;
  string orderId = 2;
  string forexId = 3;
  string dateInitialized = 4;
  string amount = 5;
  string currency = 6;
}

message CreateUserOrderPayload {
  string userId = 1;
  string forexId = 2;
  string asset = 3;
  string amount = 5;
}

message CreateUserOrderResult {
  string userId = 1;
  bool orderProcessed = 2;
  int32 numberOfAsset = 3;
  string dateInitialized = 4;
  string orderId = 5;
}

service OrderService {
  rpc GetUserOrder (GetUserOrderPayload) returns (GetUserOrderResult) {}
  rpc CreateUserOrder (CreateUserOrderPayload) returns (CreateUserOrderResult) {}
}
